Update sidebar with favorite sport

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </main>
     </div>
 
+    <aside>
+    <h2>My favourite sport is football</h2>
+
+    <p>Messi is the one of the best fotballer, he played for barcelona, psg and argentina.</p>
+    </aside>
+
     <footer>
         Made with ♥ @ Udacity
     </footer>
