Update sidebar with favorite player

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <aside>
     <h2>My favourite sport is football</h2>
 
-    <p>Messi is the one of the best fotballer, he played for barcelona, psg and argentina.</p>
+    <p>Messi is the one of the best fotballer, he played for barcelona, psg and argentina. Messi is my favourite player.</p>
     </aside>
 
     <footer>
