--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 <body>
 
     <header>
-<<<<<<< HEAD
-        <h1>Quest</h1>
-||||||| 1420bdb
-        <h1>Adventure</h1>
-=======
-        <h1>Crusade</h1>
->>>>>>> heading-update
+        <h1>Adventurous Quest danish</h1>
     </header
 
     <div class="container">
